Fixed broken link

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name:	sulfasTor website
 description: sulfasTor Website
-url: http://sulf.tk
+url: sulfastor.github.io
 
 # Build settings
 #markdown: redcarpet
